# autonomous_driving_car_project

./: LICENSE  README.md
NX/: 1.vesc.sh  2.arduino.sh  3.camera.sh  4.vizualize.sh  5.ddpg.sh  6.keyboard.sh  README.md  arduino_ROS_button.ino  build_cv.sh
NX/catkin_ws/src/enet_ros/: CMakeLists.txt  package.xml
NX/catkin_ws/src/enet_ros/launch/: enet_sad.launch  enet_sad_camera.launch
NX/catkin_ws/src/enet_ros/src/: cam_calib.pkl  detector_ros_camera.py  model_ENET_SAD.py  model_ENET_SAD_class3.py  pub_camera.py  ros_camera2.py  sub_camera.py
NX/catkin_ws/src/enet_ros/weight/: exp1_best.pth  exp_hancom_best1.pth  exp_hancom_best2.pth  exp_pavillion_best.pth
NX/catkin_ws/src/project/src/: ddpg_real_car.py  environment_real_car.py
NX/catkin_ws/src/racecar_control/scripts/: keyboard_teleop_arduino.py
SIM/: 1.CarlaON.sh  2.ChangeMap.sh  3.ego_vehicle.sh  4.enet_sad.sh  5.visualize.sh  6.on_ddpg.sh  README.md  carla_down.sh
SIM/catkin_ws/src/project/launch/: ddpg_real_car.launch  ddpg_stage_car.launch
SIM/catkin_ws/src/project/src/: ddpg_stage.py  environment_stage.py
SIM/catkin_ws/src/ros-bridge/: README.md
SIM/cvbridge_build_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
SIM/cvbridge_build_ws/logs/cv_bridge/: build.cmake.000.log.stderr
SIM/cvbridge_build_ws/logs/ros_enet/: build.cmake.000.log.stderr
SIM/cvbridge_build_ws/src/ros_enet/: CMakeLists.txt
SIM/cvbridge_build_ws/src/ros_enet/launch/: enet_sad.launch
SIM/cvbridge_build_ws/src/ros_enet/src/: detector.py
(+72 files in other folders)
